kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/typechecher_tests/invalid/026_assignmenterror.kmt
package assignmenterror_026;

require kermeta
using kermeta::standard

/* this test is for bug #2182 */
class Main {

	operation main() is do
		var elt: ModelElement init ModelElement.new
		elt.nome := "Coucou" // must raise an error here
	end
}


class ModelElement {
	attribute name : String
}
